--- a/index.html
+++ b/index.html
@@ -1,76 +1,80 @@
-<!DOCTYPE html>
 <html>
-<body>
-
+<head>
+</head>
+<body bgcolor="black">
 <style>
-.center {
-  display: block;
-  margin: 0 auto;
-  width: 100px; /* Adjust the width to make the image smaller */
-  height: 100px; /* Adjust the height accordingly */
+.container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 100vh;
 }
 
-table {
-  font-family: arial, sans-serif;
-  border-collapse: separate;
-  width: 75%;
-  border: 1px solid #dddddd;
-  border-radius: 15px;
-  overflow: hidden;
-  left: 125px;
-  position: relative;
-}
-
-td, th {
-  border: 1px solid #dddddd;
+.card {
+  width: 250px;
+  height: 340px;
+  background: #474850;
+  border-radius: 20px;
+  transition: border-radius 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
   text-align: center;
-  padding: 10px;
+  position: relative;
+  margin: 0 20px;
+  text-decoration: none; /* Remove underline from links */
+  color: inherit; /* Inherit text color */
 }
 
-tr:nth-child(even) {
-  background-color: rgb(221, 221, 221);
+.card:hover {
+  cursor: pointer;
+}
+
+.shadow {
+  box-shadow: inset 0 -1em 3em #0566c0,
+              0 0  0 2px #0566c0,
+              0.1em 0.2em 3em #0566c0;
+}
+
+.items {
+  top: 40%;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  left: calc(50% - 50px); /* Center the image within the card */
+}
+
+.dis {
+  text-align: center;
+  top: 50%;
+  position: relative;
+  font-family: "Lucida Console", "Courier New", monospace;
+  color: bisque;
+  font-size: 25px;
+  margin-top: 20px;
 }
 
 </style>
 
-<body bgcolor="grey" >
+<div class="container">
+  <a href="manchesterunited.html" class="card shadow">
+    <div class="items">
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/7a/Manchester_United_FC_crest.svg" width="100px"> 
+    </div>
+    <div class="dis">Manchester United</div>
+  </a>
 
-<h1 style="text-align:center;">Paris Saint-Germain F.C.</h1>
-<img src="file:///C:/Users/dhawd/Downloads/psg.png" alt="Italian Trulli" class="center">
+  <a href="fcbarcelona.html" class="card shadow">
+    <div class="items">
+      <img src="https://upload.wikimedia.org/wikipedia/en/4/47/FC_Barcelona_%28crest%29.svg" width="100px">
+    </div>
+    <div class="dis">FC Barcelona</div>
+  </a>
 
-<table>
-  <tr>
-    <th>player</th>
-    <th>jersey no</th>
-    <th>minutes played</th>
-  </tr>
-  <tr>
-    <td>Gianluigi Donnarumma</td>
-    <td>1</td>
-    <td>180</td>
-  </tr>
-  <tr>
-    <td>Achraf Hakimi</td>
-    <td>2</td>
-    <td>180</td>
-  </tr>
-  <tr>
-    <td>Vitinha</td>
-    <td>17</td>
-    <td>180</td>
-  </tr>
-  <tr>
-    <td>Lee Kang-in</td>
-    <td>19</td>
-    <td>99</td>
-  </tr>
-  <tr>
-    <td>João Neves</td>
-    <td>87</td>
-    <td>113</td>
-  </tr>
-
-</table>
+  <a href="bayernmunich.html" class="card shadow">
+    <div class="items">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/FC_Bayern_M%C3%BCnchen_logo_%282017%29.svg" width="100px">
+    </div>
+    <div class="dis">Bayern Munich</div>
+  </a>
+</div>
 
 </body>
 </html>
