--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
 <head>
 </head>
@@ -21,10 +22,15 @@
   margin: 0 20px;
   text-decoration: none; /* Remove underline from links */
   color: inherit; /* Inherit text color */
+  transition:
+    transform 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .card:hover {
   cursor: pointer;
+  transform: scale(1.25);
+  
 }
 
 .shadow {
